src/objects/CountryOption__c.object
<CustomObject>
    <description>This object is used for WRF-POLK. Use to provide Country Options to be selected when creating certain Work Request Forms</description>
    <fields>
        <fullName>Country__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Country</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>All WinFor Countries</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia-Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Congo</fullName>
                </value>
                <value>
                    <fullName>Cote Divoire</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>El Salvador</fullName>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                </value>
                <value>
                    <fullName>Ethiopia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataType__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Data Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global VIO</fullName>
                </value>
                <value>
                    <fullName>NA VIO</fullName>
                </value>
                <value>
                    <fullName>New Regs</fullName>
                </value>
                <value>
                    <fullName>New Regs 1 : 1</fullName>
                </value>
                <value>
                    <fullName>New Regs CO 2</fullName>
                </value>
                <value>
                    <fullName>New Regs COS</fullName>
                </value>
                <value>
                    <fullName>Used Regs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Geography</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Regional - Other</fullName>
                </value>
                <value>
                    <fullName>NUTS Level 1</fullName>
                </value>
                <value>
                    <fullName>NUTS Level 2</fullName>
                </value>
                <value>
                    <fullName>NUTS Level 3</fullName>
                </value>
                <value>
                    <fullName>Forecast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>America North</fullName>
                </value>
                <value>
                    <fullName>America South</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Europe Central</fullName>
                </value>
                <value>
                    <fullName>Europe East</fullName>
                </value>
                <value>
                    <fullName>Europe West</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>Oceania</fullName>
                </value>
                <value>
                    <fullName>WinFor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RequestType__c</fullName>
        <description>Enables a different country configuration for each Request Type, as needed;</description>
        <label>Request Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Data Extract</fullName>
                </value>
                <value>
                    <fullName>Data Extract Global VIO (PARC)</fullName>
                </value>
                <value>
                    <fullName>Data Extract North America</fullName>
                </value>
                <value>
                    <fullName>Mapping</fullName>
                </value>
                <value>
                    <fullName>MarketInsight System</fullName>
                </value>
                <value>
                    <fullName>MarketInsight VIO System</fullName>
                </value>
                <value>
                    <fullName>New Reg System</fullName>
                </value>
                <value>
                    <fullName>Scrapage</fullName>
                </value>
                <value>
                    <fullName>WorldView Global VIO</fullName>
                </value>
                <value>
                    <fullName>WorldView OE Parts Research</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VehicleType__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Vehicle Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CARS</fullName>
                </value>
                <value>
                    <fullName>HCV</fullName>
                </value>
                <value>
                    <fullName>LCV</fullName>
                </value>
                <value>
                    <fullName>GVW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Country Option</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CO-{0000}</displayFormat>
        <label>Country Option Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Country Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>